# stockholm-api-gateway-http-api

./: CLAUDE.md  Makefile  README.md  consumer-template.yaml  producer-template.yaml  pyproject.toml  samconfig.toml  sonar-project.properties  template.yaml
.github/: dependabot.yml
.github/workflows/: main.yaml
app/: allowlist.py  clients.py  consumer.py  main.py  oauth.py  producer.py
aws/: api-gateway.yml  application.yml  consumer-iam-role.yml  iam-role.yml  producer-iam-role.yml  resource-group.yml  sqs-policy.yml  sqs.yml
docs/superpowers/plans/: 2026-07-01-mock-oauth-token-endpoint.md
docs/superpowers/specs/: 2026-07-01-mock-oauth-token-endpoint-design.md
tests/: conftest.py  test_allowlist.py  test_clients.py  test_consumer.py  test_oauth.py  test_producer.py
