[project]
name = "stockholm-api-gateway-http-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools>=3.31.0",
    "pyjwt>=2.0",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools[aws-sdk]>=3.31.0",
    "cfn-lint>=1.53.0",
    "moto[sqs]>=5.2.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
    "ruff>=0.15.21",
    "ty>=0.0.58",
]

##### TESTING #####

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    # Expected: only failure/denial paths emit custom metrics, so success-path tests
    # legitimately flush an empty metric set.
    "ignore:No application metrics to publish.*:UserWarning:aws_lambda_powertools.metrics.provider.base",
]

[tool.coverage.run]
branch = true
source = ["app"]
relative_files = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # imports / code here is executed during mypy tests.
]
fail_under = 75
precision = 2

[tool.coverage.xml]
output = "build/coverage.xml"

#### LINTING ###

[tool.ruff]
# Set the maximum line length
line-length = 120
exclude = [".git", "__pycache__", ".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "A",      # flake8-builtins
    "ARG",    # flake8-unusued-arguments
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "C4",     # flake8-comprehensions
    "C90",    # McCabe Complexity
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle
    "EM",     # flake8-errmsg
    "F",      # Pyflakes
    "G",      # flake8-logging-format
    "FLY",    # Flynt
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "N",      # PEP8 Naming
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RUF",    # Ruff-specific
    "RSE",    # flake8-raise
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "SLF001", # flake8-self private-member-access
    "SLOT",   # flake8-slots
    "TCH",    # flake8-typechecking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "T20",    # flake8-print
    "T100",   # flake8-debugger
    "UP",     # pyupgrade
    "W",      # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = [
    "T201",    # Print statements allowed in scripts
]
# Tests can have more flexible rules
"tests/**/*.py" = [
    "ARG001",  # Pytest fixtures appear as unused function arguments
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Local imports inside test functions are a common pattern
    "S101",    # Use of assert
    "S105",
    "S106",
    "S107",
    "T201",    # Print statements in tests
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
# Use double quotes
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
